--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
       "@/*": ["./src/*"]
     },
     "types": ["node"],
-    "jsx": "react"
+    "jsx": "react",
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   }
 }
