fixed donation link

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     "types": ["node", "vite/client"]
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "composite": true
 }
